fix: downgrade kotlinx-coroutines to 1.3.9 and add mainClassName for Kotlin applications